--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.1.3",
     "ngx-bootstrap": "^7.1.2",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.3.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
